--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   background-color: #011F3F;
 
 }
+
 .game-text {
   font-family: 'Press Start 2P', cursive;
   font-size: 2.5rem;
@@ -12,13 +13,18 @@ body {
 
 .container {
   display: block;
-  width: 100%;
+  width: 75%;
   margin: auto;
 }
-
+.row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 
 .btn {
-  margin: 2vh;
+  /* margin: 2vh; */
   display: inline-block;
   height: 20vh;
   width: 20vh;
